Make selected fields optional
