# javascript/enlighten/src/model/EnergyLifetimeResponse.js
@@ -26,14 +26,11 @@ class EnergyLifetimeResponse {
      * @param startDate {Date} When no `start_date` parameter is specified on the request, this is the `operational_date` of the system. May be null if system has never produced. When a `start_date` parameter is included in the request, it is included here in the response.
      * @param systemId {Number} The identifier of the system.
      * @param production {Array.<Number>} An array of production measurements, one for each day since the system started producing, or one for each day of the requested period. If the system has never produced energy, the array may be empty.
-     * @param microProduction {Array.<Number>} 
-     * @param meterProduction {Array.<Number>} 
-     * @param meterStartDate {Date} The first day in the time series when measurements are taken from a meter instead of from microinverters. This field is not present unless the system has a meter.
      * @param meta {module:model/Meta} 
      */
-    constructor(startDate, systemId, production, microProduction, meterProduction, meterStartDate, meta) { 
+    constructor(startDate, systemId, production, meta) { 
         
-        EnergyLifetimeResponse.initialize(this, startDate, systemId, production, microProduction, meterProduction, meterStartDate, meta);
+        EnergyLifetimeResponse.initialize(this, startDate, systemId, production, meta);
     }
 
     /**
@@ -41,13 +38,10 @@ class EnergyLifetimeResponse {
      * This method is used by the constructors of any subclasses, in order to implement multiple inheritance (mix-ins).
      * Only for internal use.
      */
-    static initialize(obj, startDate, systemId, production, microProduction, meterProduction, meterStartDate, meta) { 
+    static initialize(obj, startDate, systemId, production, meta) { 
         obj['start_date'] = startDate;
         obj['system_id'] = systemId;
         obj['production'] = production;
-        obj['micro_production'] = microProduction;
-        obj['meter_production'] = meterProduction;
-        obj['meter_start_date'] = meterStartDate;
         obj['meta'] = meta;
     }
 
